<resources>
    <string name="hello">Hello World, SOCAndroid!</string>
    <string name="app_name">SOCAndroid</string>
    <string name="newGame">New Game</string>
    <string name="restoreGame">Restore</string>
    <string name="configure">Configure</string>
    <string name="configureBoard">Configure Board</string>
    <string name="configureAccount">Configure Account</string>
    <string name="configureGame">Configure Game</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="loadDefaultBoard">Load Default</string>
    <string name="saveAsDefaultBoard">Save as\nDefault Board</string>
    <string name="createNewBoard">Create\nNew Board</string>
    <string name="saveAsNewBoard">Save as\nNew Board</string>
    <string name="mainMenu">Main Menu</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="hexagon">Hexagon</string>
    <string name="rectangle">Rectangle</string>
    <string name="ok">OK</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="smallHex">Small Hexagon</string>
    <string name="medHex">Medium Hexagon</string>
    <string name="lrgHex">Large Hexagon</string>
    <string name="smallRect">Small Rectangle</string>
    <string name="medRect">Medium Rectangle</string>
    <string name="lrgRect">Large Rectangle</string>
    <string name="soclabel">Senators of Caron</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_body">
    
    Construction of the Island\n
\n
(Starting set up for beginners).\n
\n
The game is played on a randomly constructed game board. However, for your first game you may want to use the start arrangement for beginners [-] illustrated on the back of these rules. This set up is quite balanced. Set up the game board according to the illustration. The game is more fun with the variable set up, and for those who would like to go right to it, you\'ll find the necessary information under construction [-], founding phase [-] and tactic [-].
\n
Preparation
\n
(Start arrangement for beginners).
\n
Each player chooses a color. Streets and settlements for all four players are already set up on the illustration (see reverse). Each player takes their remaining settlements, roads and cities and sets them before themselves.
If only 3 players are in the game, then the red settlements and roads are removed.\n
Each player takes a building cost [-] card.\n
The special cards Longest Trade Route [-] and Largest Knight Force [-] are set beside the game board as are the dice as well.\n
The Raw Material Cards [-] are sorted into 5 stacks and they are set face up next to the game board.\n
The Development Cards [-] (dark backs) are shuffled and set face down next to the game board.\n
Finally, each player receives their first Raw Material Production [-] from their settlement marked with a star. For each land hex that borders this settlement, the player takes one corresponding raw material card. EXAMPLE (see reverse): Blue receives 2 x Lumber and 1 x Wheat.\n
Your own raw material cards are always kept hidden from the other players.\n
Game Outline in General\n
\n
The oldest player begins. On your turn, the following actions are taken in the indicated sequence:\n
\n
You must roll the dice for raw material production [-]. The dice roll counts for all of the players.\n
You may trade [-]: with the other players to get the raw material cards you want.\n
You may build [-]: roads [-], settlements [-] or cities [-]; or you can buy development cards [-].\n
In addition, on your turn you may play one of your development cards [-]. After that the player to the left continues.\n
\n
Game Outline in Particular\n
\n
1. Raw Material Production\n
\n
A player begins his or her turn by rolling the dice. The number rolled determines which land hex(es) will produce raw materials.\n
\n
Each player who has a settlement [-] standing on an intersection [-] that borders these hexes takes one raw material card of the corresponding type.\n
\n
EXAMPLE: see raw material production [-].\n
\n
2. Trade [-]\n
\n
After that, the player who rolled for production now may conduct trades to try to get the raw material cards needed to buy the things he or she wants.\n
\n
Domestic trade [-]\n
The player may exchange his own raw material cards for the raw material cards of the other players. The player may inform the other players what he wants and what he is willing to trade to get it. He can also listen to the suggestions of the other players and make counter-offers.\n
\n
Important: All trades must be made with the player who is currently taking his turn. The other players may not trade amongst themselves.\n
\n
Sea trade [-]\n
You do not have to trade with the other players.\n
\n
On your turn, you may always make a 4:1 trade (even if you do not have a settlement at a harbor location [-]. To do this, you return four raw material cards of the same type to their stack and take one raw material card of your choice.\n
\n
If you have built a settlement at a harbor location [-], then you can get a better exchange rate. Either a 3:1 rate or, in the special harbors (the ones with the raw material symbols), a 2:1 rate. Note: the 2:1 rate is available only if you turn in two of the pictured raw material.\n
\n
3. Build [-]\n
\n
Finally, you can increase your victory points [-] by building things.\n
\n
To build, you must turn in certain raw material card combinations (see the building costs card). You then take as many roads, settlements and/or cities from your stock and set them on the game board.\n
\n
Roads [-];\n
requires: 1 Brick + 1 Lumber\n
\n
A new street must always be placed on an edge [-] leading from one of your own settlements, cities or roads. On each edge, only one road may be built. As soon as a player has built a nonstop road at least 5 roads long, that player receives the special card for the Longest Trade Route [-]. If another player then builds a nonstop trade route longer than the one created by the current owner of the card, then that player is the new owner of the Longest Trade route card.\n
\n
Settlement [-];\n
requires: 1 Brick + 1 Lumber + 1 Wool + 1 Wheat\n
\n
IMPORTANT: The distance rule [-]: A settlement may only be built on an intersection [-] if the three adjacent intersections are NOT occupied by settlements. It does not matter if the adjacent settlements would belong to the same player. The settlement must connect to at least one road of the same color.\n
\n
For each settlement that borders a producing land hex, the owner receives one raw material card of the corresponding type.\n
\n
Each of your settlements adds one victory point to your total.\n
\n
City [-];\n
requires: 3 Ores + 2 Wheat\n
\n
When you build a city, you replace one of your settlements with one of your cities (church).\n
\n
For each city that borders a producing land hex, the owner receives two raw material cards of the corresponding type.\n
\n
Each of your cities adds two victory points to your total.\n
\n
Development Card [-];\n
(requires 1 Ore + 1 Wool + 1 Wheat)\n
\n
When you buy a development card, you draw the top card from the development card stack.\n
\n
There are three different kinds of development cards: Knights [-], Progress [-] and Victory Points [-]\n
\n
The development cards you buy are kept hidden from the other players until you decide to use them.\n
\n
4. Special cases\n
\n
a) Rolling Seven-robbers become active [-].\n
\n
If a \'7\' is rolled in the raw material production phase, then none of the hexes produce raw material.\n
\n
All players count their raw material cards. If anyone has more than 7, then they must select half of them (round down) to return to their respective raw material stacks.\n
\n
Next, the robber [-] must be moved. Refer to the paragraph on knights below, under points 1 and 2 to see how this is done.\n
\n
b) Development Card Play [-].\n
\n
Knight cards [-]\n
When played on your turn, the knight cards remain face up before you for the rest of the game.\n
\n
The first player to have three knight cards turned face up before him or herself receives the special Largest Knight Force card [-], which is worth 2 victory points.\n
\n
If another player manages to display more knight cards than the current owner of the Largest Knight Force card, then that player takes the card from its current owner.\n
\n
Also, when you play a knight card then you must:\n
\n
Immediately move the robber [-] to another land hex and set it on that land hex\'s number chip [-].\n
You then rob any other player who has a settlement bordering the hex to which the robber has been moved. If more than one other player has a settlement on this hex, then the you may choose which player to rob. You then draw one card, sight unseen, from the robbed player\'s hand of raw material cards.\n
IMPORTANT: If in a future raw material production phase the hex on which the robber is standing is rolled, then that hex produces NO raw materials.\n
\n
Progress cards [-]\n
When played on your turn, you immediately execute the described action. The card is then removed from the game.\n
\n
Victory points [-]\n
These cards should not be displayed until you declare the game won . Then you show them to bring your victory point total to 10.\n
\n
Game end [-]\n
\n
The game ends when a player declares on his or her turn that he or she has 10 victory points.\n
\n
    </string>
    <string name="none">NONE</string>
    <string name="water">Water</string>
    <string name="randomPort">Random Port</string>
    <string name="randomPortOrWater">Random Port\nor Water</string>
    <string name="randomResource">Random Resource</string>
    <string name="randomResourceOrDesert">Random Resource\nor Desert</string>
    <string name="wood">Wood</string>
    <string name="sheep">Sheep</string>
    <string name="ore">Ore</string>
    <string name="wheat">Wheat</string>
    <string name="brick">Brick</string>
    <string name="desert">Desert</string>
    <string name="monopoly">Monopoly</string>
    <string name="yearOfPlenty">Year of\nPlenty</string>
    <string name="roadBuilding">Road\nBuilding</string>
    <string name="victory">Victory</string>
    <string name="soldier">Soldier</string>
    <string name="buildRoad">Build Road</string>
    <string name="buildSettlement">Build Settlement</string>
    <string name="buildCity">Build City</string>
    <string name="drawDevelopment">Draw\nDevelopment\nCard</string>
    <string name="useMonopolyCard">Use Monopoly\nCard</string>
    <string name="useYearOfPlentyCard">Use Year of\nPlenty Card</string>
    <string name="useRoadBuildingCard">Use Road Building\nCard</string>
    <string name="useVictoryCard">Use Victory\nCard</string>
    <string name="useSoldierCard">Use Soldier\nCard</string>
    <string name="continue_">Continue</string>
    <string name="finalizeBoard">Finalize</string>
    <string name="loadBoard">Load Board</string>
    <string name="about">About</string>
    <string name="helpWithPoints">Help with Points</string>
    <string name="helpWithStructures">Structures</string>
    <string name="helpwithRoads">Roads</string>
    <string name="helpWithArmies">Armies</string>
    <string name="helpWithResources">Resources</string>
    <string name="helpwithTrades">Trading</string>
    <string name="helpWithDevelopment">Development Cards</string>
    <string name="mainheader">My Games</string>
    <string name="main_soc">Senators of Caron</string>
    <string name="main_robocraze">Robot Crazy</string>
    <string name="main_multiplayer">Multiplayer</string>
    <string name="playKaiser">Kaiser Card Game</string>
    <string name="playGolf">Golf Card Game</string>
    <string name="quit">Quit</string>
    <string name="golfbuttonrules">Rules</string>
    <string name="playYahtzee">Play Yahtzee</string>
    <string name="done">Done</string>
</resources>