<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  >
    <Button android:layout_height="wrap_content" android:id="@+id/newGame" android:text="@string/newGame" android:layout_width="fill_parent"></Button>
    <Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/configure" android:text="@string/configure"></Button>
    <Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/restoreGame" android:text="@string/restoreGame"></Button>
    <Button android:text="@string/multiplayer" android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/multiplayer"></Button>
    <Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/instructions" android:text="@string/instructions"></Button>
    <Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/about" android:text="@string/about"></Button>
</LinearLayout>
