<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent">

    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
    
	<LinearLayout android:layout_width="wrap_content"
		android:layout_height="fill_parent" android:orientation="vertical">
		<LinearLayout android:layout_height="wrap_content"
			android:layout_width="fill_parent" />

		<RadioGroup android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:orientation="vertical"
			android:id="@+id/radioGroup">
			<RadioButton android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/newSmallBoardHex"
				android:text="@string/smallHex" android:checked="true"/>
			<RadioButton android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/newMediumBoardHex"
				android:text="@string/medHex" />
			<RadioButton android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/newLargeBoardHex"
				android:text="@string/lrgHex" />
			<RadioButton android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/newSmallBoardRect"
				android:text="@string/smallRect" />
			<RadioButton android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/newMediumBoardRect"
				android:text="@string/medRect" />
			<RadioButton android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/newLargeBoardRect"
				android:text="@string/lrgRect" />
		</RadioGroup>
		<LinearLayout android:layout_height="fill_parent"
			android:layout_width="fill_parent">
			<Button android:layout_height="wrap_content" android:text="@string/ok"
				android:layout_width="wrap_content" android:layout_weight="1.3"
				android:id="@+id/okCreateBoard" />
			<Button android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:id="@+id/cancelButton"
				android:text="@string/cancel" android:layout_weight="1" />
		</LinearLayout>
	</LinearLayout>
    </ScrollView>
</LinearLayout>
