<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <cc.game.android.golf.GolfView
        android:id="@+id/golfBoard"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/golfButtonsLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/golfBoard" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newGame" android:id="@+id/golfButtonNewGame"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restoreGame" android:id="@+id/golfButtonRestore"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quit" android:id="@+id/golfButtonQuit"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_" android:id="@+id/golfButtonContinue"/>

        <Button
            android:id="@+id/golfButtonRules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/golfbuttonrules" />
        
    </LinearLayout>
    <TextView
        android:id="@+id/golfTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/golfButtonsLayout"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/golfmessages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/golfButtonsLayout"/>

</RelativeLayout>